testsuite/gnatprove/tests/SB07-003__crash/test.out
a-cofuve.ads:96:06: info: data dependencies proved, in instantiation at a-cfdlli.ads:75, in instantiation at database.adb:15
database.adb:15:04: error: "Item" is not writable
database.adb:15:04: error: instantiation error at a-cfdlli.ads:75
database.adb:15:04: error: instantiation error at a-cofuve.ads:339
database.adb:15:04: error: object was declared as not writable at a-cofuve.ads:339, instance at a-cfdlli.ads:75, instance at line 15
database.adb:19:04: info: initialization of "Database" proved
gnatprove: error during flow analysis and proof
